Bug 2048294 - Don't re-queue a transaction if it's already dispatched to a connection, r=necko-reviewers,valentin

WebSocket transactions are sticky, so once they are dispatched, their Connection() is set and ProcessNewTransaction re-dispatches them onto that same connection. During a Happy Eyeballs race, a losing attempt could re-queue a transaction that the winner has already dispatched, causing it to be re-dispatched onto a connection that no longer has a transport and.

To avoid that, skip re-queuing or re-activating at the Happy Eyeballs handoff points (ProcessTCPConn, ProcessUDPConn, EnterSucceeded, and EnterDone) once the transaction already has a Connection().

Differential Revision: https://phabricator.services.mozilla.com/D308020